Changed Rem sizes and book layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#Contact" class="stone3">Contact</a></li>
           </ul>
         </nav>
-        <h1 class="flashlight-text">Sam Murgatroyd</h1>
+        <h1 class="title">Sam Murgatroyd</h1>
       </header>
 
       <section id="quotesContianer">
@@ -55,14 +55,14 @@
             things. And when I shared them with a few mates, they found it
             helpful too. That's when I realised that my early struggles weren't
             just obstacles; they were tools I could use to help others through
-            my writing. I initially began writing nonfiction and after releasing
+            my writing.<br><br> I initially began writing nonfiction and after releasing
             ‘Alienated’ decided to begin writing fiction. I decided to make this
             change not only to help depict my message further through characters
             such as in Robin’s Bench but also to be able to be more expressive
             of my ideas through the boundless world of fiction writing. All my
             life I have wanted to help others in whichever way I can, I have
             worked in mental health services, the probation service and also
-            children’s care homes. I'm on a mission to make a positive
+            children’s care homes. <br><br>I'm on a mission to make a positive
             difference with my words, especially for those who feel out of place
             in this world, to show them they're not alone. I know what it's like
             to hit rock bottom, and I want to spread the word that there's
@@ -71,12 +71,6 @@
           </p>
         </section>
 
-        <div class="card-container">
-          <div class="card">
-            <div class="frontCard"></div>
-            <div class="backCard"></div>
-          </div>
-        </div>
         <section id="Books">
           <h2><span>Books</span></h2>
           <a
@@ -132,10 +126,12 @@
               to those who feel adrift in a world that doesn't quite fit."
             </p>
           </div>
+          <div class="buy-container">
           <a
             href="https://www.amazon.co.uk/Alienated-Sam-Murgatroyd/dp/B0CVF4BCDR"
             ><span class="buy">Buy on Amazon</span></a
           >
+        </div>
         </section>
       </section>
     </main>
