Html script changed

--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
       ></a>
       <a>sam.murgatroyd@outlook.com</a>
     </footer>
-    <script src="index.JS"></script>
+    <script src="index.js"></script>
   </body>
 </html>
