Changed color cheme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <canvas></canvas>
 
       <header>
-        <nav>
+        <nav >
           <ul>
             <li><a href="#About" class="stone1">About</a></li>
             <li><a href="#Books" class="stone2">Books</a></li>
@@ -45,7 +45,7 @@
       <section class="container">
         <section id="About">
           <h1>About Sam</h1>
-          <p>
+          <p class="aboutMe">
             I'm a budding writer from Manchester, England. Growing up, I had a
             bit of a rocky journey with my mental health. It was tough, but I
             learned a lot from those experiences. I started writing what later
