fixed dark mode and footer sizes

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </section>
       </section>
     </main>
-    <footer>
+    <footer id="Contact">
       <a
         href="http://www.goodreads.com/samuelmurgatroyd"
         alt="goodreads link"
