Fixed "book" background

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>
 
         <section id="Books">
-          <h2><span>Books</span></h2>
+          <h2 class="category">Books</h2>
           <a
             href="https://www.amazon.co.uk/Alienated-Sam-Murgatroyd/dp/B0CVF4BCDR"
             ><h3>Alienated</h3></a
